Initial project commit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/lambda/document_processor/requirements.txt
+          if [ -f src/lambda/document_processor/requirements.txt ]; then pip install -r src/lambda/document_processor/requirements.txt; fi
+          if [ -f src/lambda/dashboard_api/requirements.txt ]; then pip install -r src/lambda/dashboard_api/requirements.txt; fi
           pip install pytest pytest-cov
           
       - name: Run tests
         run: |
-          pytest tests/ --cov=src
+          if [ -d tests ]; then pytest tests/ --cov=src; fi
   
   terraform-plan:
     needs: test
@@ -44,16 +45,31 @@ jobs:
           
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.7
+        
+      - name: Terraform Format Check
+        run: |
+          cd terraform
+          terraform fmt -check || echo "Warning: Terraform files are not formatted."
         
       - name: Terraform Init
+        id: init
         run: |
           cd terraform
           terraform init
           
-      - name: Terraform Plan
+      - name: Terraform Validate
+        id: validate
         run: |
           cd terraform
-          terraform plan -out=tfplan
+          terraform validate -no-color
+          
+      - name: Terraform Plan
+        id: plan
+        run: |
+          cd terraform
+          terraform plan -no-color -out=tfplan
           
       - name: Upload Terraform Plan
         uses: actions/upload-artifact@v3
@@ -74,11 +90,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          role-duration-seconds: 3600
           
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.7
         
       - name: Download Terraform Plan
         uses: actions/download-artifact@v3
@@ -91,36 +107,29 @@ jobs:
           cd terraform
           terraform apply -auto-approve tfplan
           
+      - name: Get Terraform Outputs
+        id: terraform-outputs
+        run: |
+          cd terraform
+          echo "DOCUMENT_PROCESSOR_FUNCTION=$(terraform output -raw lambda_document_processor_name)" >> $GITHUB_ENV
+          echo "DASHBOARD_API_FUNCTION=$(terraform output -raw lambda_dashboard_api_name)" >> $GITHUB_ENV
+          echo "S3_BUCKET=$(terraform output -raw s3_bucket_name)" >> $GITHUB_ENV
+          echo "EC2_IP=$(terraform output -raw ec2_instance_public_ip)" >> $GITHUB_ENV
+          
       - name: Package Lambda Functions
         run: |
-          cd src/lambda/document_processor
-          pip install -r requirements.txt -t .
-          zip -r ../../../document_processor.zip .
-          
-          cd ../dashboard_api
-          pip install -r requirements.txt -t .
-          zip -r ../../../dashboard_api.zip .
+          bash scripts/package_lambdas.sh
           
       - name: Deploy Lambda Functions
         run: |
           aws lambda update-function-code \
-            --function-name document-processor \
+            --function-name ${{ env.DOCUMENT_PROCESSOR_FUNCTION }} \
             --zip-file fileb://document_processor.zip
             
           aws lambda update-function-code \
-            --function-name dashboard-api \
+            --function-name ${{ env.DASHBOARD_API_FUNCTION }} \
             --zip-file fileb://dashboard_api.zip
             
       - name: Deploy Dashboard App
         run: |
-          S3_BUCKET=$(aws cloudformation describe-stacks --stack-name document-processing-stack --query "Stacks[0].Outputs[?OutputKey=='S3BucketName'].OutputValue" --output text)
-          aws s3 cp src/dashboard s3://$S3_BUCKET/app/ --recursive
-          
-          EC2_IP=$(aws cloudformation describe-stacks --stack-name document-processing-stack --query "Stacks[0].Outputs[?OutputKey=='EC2InstancePublicIP'].OutputValue" --output text)
-          
-          # Wait for EC2 instance to be ready
-          echo "Waiting for EC2 instance to be ready..."
-          sleep 60
-          
-          # Deploy dashboard app to EC2
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@$EC2_IP "aws s3 cp s3://$S3_BUCKET/app/ /app/ --recursive"
+          aws s3 cp src/dashboard s3://${{ env.S3_BUCKET }}/app/ --recursive
