--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,7 +96,7 @@ jobs:
           terraform_version: 1.5.7
         
       - name: Download Terraform Plan
-        uses: actions/download-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: terraform-plan
           path: terraform
