--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,7 +104,7 @@ jobs:
           terraform_version: 1.5.7
         
       - name: Download Terraform Plan
-        uses: actions/download-artifact@v
+        uses: actions/download-artifact@v4
         with:
           name: terraform-plan
           path: terraform
