--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,11 +1,10 @@
 name: Terraform Destroy
 
-# This workflow creates a "button" in GitHub Actions to destroy infrastructure
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment to destroy (dev, staging, prod)'
+        description: 'Environment to destroy'
         required: true
         default: 'dev'
         type: choice
@@ -13,53 +12,43 @@ on:
           - dev
           - staging
           - prod
-      confirmation:
-        description: 'Type "destroy" to confirm infrastructure destruction'
+      confirm:
+        description: 'Type "destroy" to confirm'
         required: true
         type: string
 
 jobs:
-  terraform-destroy:
-    name: Terraform Destroy
+  destroy:
     runs-on: ubuntu-latest
-    # Only run if the confirmation is exactly "destroy"
-    if: ${{ github.event.inputs.confirmation == 'destroy' }}
+    if: ${{ github.event.inputs.confirm == 'destroy' }}
     
     env:
       TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: actions/checkout@v4
+      
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: '1.5.0'
           
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.AWS_REGION || 'us-east-1' }}
           
       - name: Terraform Init
-        run: terraform init
-      
-      - name: Terraform Workspace
         run: |
+          cd terraform
+          terraform init
+      
+      - name: Select Workspace
+        run: |
+          cd terraform
           terraform workspace select ${{ github.event.inputs.environment }} || terraform workspace new ${{ github.event.inputs.environment }}
       
-      - name: Terraform Destroy Plan
-        run: terraform plan -destroy -out=destroy.tfplan
-      
-      - name: Terraform Destroy Confirmation
+      - name: Terraform Destroy
         run: |
-          echo "👀 CAUTION! You are about to destroy infrastructure for environment: ${{ github.event.inputs.environment }}"
-          echo "This action will delete all resources managed by Terraform in this workspace."
-          echo "The destroy plan is available above. Review it carefully."
-          echo "To proceed with destruction, you've already confirmed by typing 'destroy'."
-      
-      - name: Terraform Apply Destroy
-        run: terraform apply destroy.tfplan
+          cd terraform
+          terraform destroy -auto-approve
