--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -13,42 +13,87 @@ on:
           - staging
           - prod
       confirm:
-        description: 'Type "destroy" to confirm'
+        description: 'Type "destroy-[environment]" to confirm'
         required: true
         type: string
 
 jobs:
-  destroy:
+  validate:
+    name: 'Validate Destroy Request'
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.confirm == 'destroy' }}
+    
+    steps:
+      - name: Check confirmation
+        id: check
+        run: |
+          EXPECTED="destroy-${{ github.event.inputs.environment }}"
+          ACTUAL="${{ github.event.inputs.confirm }}"
+          
+          if [ "$EXPECTED" != "$ACTUAL" ]; then
+            echo "::error::Confirmation does not match! Expected '$EXPECTED' but got '$ACTUAL'"
+            exit 1
+          fi
+          
+          echo "Confirmation validated. Will proceed with destroying the ${{ github.event.inputs.environment }} environment."
+  
+  destroy:
+    name: 'Destroy Infrastructure'
+    runs-on: ubuntu-latest
+    needs: validate
+    environment: ${{ github.event.inputs.environment }}
     
     env:
       TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION || 'us-east-1' }}
     
     steps:
-      - uses: actions/checkout@v4
-      
-      - uses: hashicorp/setup-terraform@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: '1.5.0'
-          
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION || 'us-east-1' }}
           
       - name: Terraform Init
         run: |
           cd terraform
           terraform init
-      
+        
       - name: Select Workspace
         run: |
           cd terraform
           terraform workspace select ${{ github.event.inputs.environment }} || terraform workspace new ${{ github.event.inputs.environment }}
-      
+        
+      - name: Terraform Plan Destroy
+        run: |
+          cd terraform
+          terraform plan -destroy -out=tfdestroyplan
+        
+      - name: Confirm Destruction
+        run: |
+          echo "🚨 DANGER! 🚨"
+          echo "You are about to destroy the entire ${{ github.event.inputs.environment }} environment."
+          echo "Review the plan output above to ensure this is what you want."
+          echo "This action will destroy all resources in the environment and cannot be undone."
+          echo ""
+          echo "Waiting 30 seconds before proceeding with destruction..."
+          sleep 30
+        
       - name: Terraform Destroy
         run: |
           cd terraform
-          terraform destroy -auto-approve
+          terraform apply -auto-approve tfdestroyplan
+        
+      - name: Notify Destruction Complete
+        run: |
+          echo "## Destruction Complete" >> $GITHUB_STEP_SUMMARY
+          echo "* **Environment**: ${{ github.event.inputs.environment }}" >> $GITHUB_STEP_SUMMARY
+          echo "* **Destruction Time**: $(date)" >> $GITHUB_STEP_SUMMARY
+          echo "* **Triggered By**: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Warning" >> $GITHUB_STEP_SUMMARY
+          echo "* All resources in the ${{ github.event.inputs.environment }} environment have been destroyed." >> $GITHUB_STEP_SUMMARY
+          echo "* To recreate this environment, run the CI/CD Pipeline workflow." >> $GITHUB_STEP_SUMMARY
