--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'  # Updated to latest LTS
       
       - name: Install Python dependencies
         run: |
@@ -104,12 +104,12 @@ jobs:
       
       - name: Build dashboard frontend
         run: |
-          cd src/dashboard
+          cd src/dashboard/src
           npm install
           npm run build
-          cd ../..
+          cd ../../..
           mkdir -p build/dashboard
-          cp -r src/dashboard/build/* build/dashboard/
+          cp -r src/dashboard/src/build/* build/dashboard/
       
       - name: Upload Lambda artifacts
         uses: actions/upload-artifact@v4
@@ -152,29 +152,24 @@ jobs:
       
       - name: Terraform Init
         run: |
-          cd terraform
           terraform init
       
       - name: Select Terraform Workspace
         run: |
-          cd terraform
           ENVIRONMENT="${{ github.event.inputs.environment || 'dev' }}"
           terraform workspace select $ENVIRONMENT || terraform workspace new $ENVIRONMENT
       
       - name: Terraform Plan
         run: |
-          cd terraform
           terraform plan -out=tfplan
       
       - name: Terraform Apply
         run: |
-          cd terraform
           terraform apply -auto-approve tfplan
       
       - name: Extract Terraform Outputs
         id: terraform-outputs
         run: |
-          cd terraform
           echo "S3_BUCKET=$(terraform output -raw s3_bucket_name)" >> $GITHUB_ENV
           echo "RDS_ENDPOINT=$(terraform output -raw rds_endpoint)" >> $GITHUB_ENV
           echo "EC2_IP=$(terraform output -raw ec2_instance_public_ip)" >> $GITHUB_ENV
@@ -195,7 +190,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Download Lambda artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4  # Updated to v4
         with:
           name: lambda-packages
           path: ./lambda-packages
@@ -258,7 +253,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Download dashboard frontend
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4  # Updated to v4
         with:
           name: dashboard-frontend
           path: ./dashboard-build
