--- a/src/lambda/document_processor/requirements.txt
+++ b/src/lambda/document_processor/requirements.txt
@@ -1,4 +1,11 @@
-boto3==1.26.76
-pandas==1.5.3
-numpy==1.24.3
-psycopg2-binary==2.9.6
+boto3>=1.26.0
+psycopg2-binary>=2.9.5
+pytesseract>=0.3.10
+pdf2image>=1.16.3
+PyPDF2>=3.0.1
+Pillow>=9.4.0
+pandas>=1.3.5
+numpy>=1.22.0
+tabula-py>=2.5.0
+matplotlib>=3.5.0
+opencv-python>=4.5.5
