--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -132,6 +132,11 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION || 'us-east-1' }}
     
+    outputs:
+      ec2_ip: ${{ steps.terraform-outputs.outputs.ec2_ip }}
+      s3_bucket: ${{ steps.terraform-outputs.outputs.s3_bucket }}
+      api_url: ${{ steps.terraform-outputs.outputs.api_url }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -166,12 +171,9 @@ jobs:
         id: terraform-outputs
         run: |
           cd infrastructure/terraform
-          EC2_IP=$(terraform output -raw ec2_instance_public_ip)
-          echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
-          echo "EC2 IP is: $EC2_IP" 
-          echo "S3_BUCKET=$(terraform output -raw s3_bucket_name)" >> $GITHUB_ENV
-          echo "API_URL=$(terraform output -raw api_gateway_url)" >> $GITHUB_ENV
-          echo "EC2_IP=$(terraform output -raw ec2_instance_public_ip)" >> $GITHUB_ENV
+          echo "S3_BUCKET=$(terraform output -raw s3_bucket_name)" >> $GITHUB_OUTPUT
+          echo "API_URL=$(terraform output -raw api_gateway_url)" >> $GITHUB_OUTPUT
+          echo "EC2_IP=$(terraform output -raw ec2_instance_public_ip)" >> $GITHUB_OUTPUT
       - name: Set outputs
         id: set-outputs
         run: |
@@ -236,8 +238,13 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ env.EC2_IP }} >> ~/.ssh/known_hosts
-        shell: /usr/bin/bash -e {0}
+          if [ -n "${{ env.EC2_IP }}" ]; then
+            ssh-keyscan -H ${{ env.EC2_IP }} >> ~/.ssh/known_hosts
+          else
+            echo "EC2_IP is not set or empty. Skipping ssh-keyscan."
+            exit 1
+          fi
+        
       
       - name: Upload frontend to EC2
         run: |
@@ -252,6 +259,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-frontend
     environment: ${{ github.event.inputs.environment || 'dev' }}
+    
+    env:
+      EC2_IP: ${{ needs.deploy-infrastructure.outputs.ec2_ip }}
+      API_URL: ${{ needs.deploy-infrastructure.outputs.api_url }}
+      S3_BUCKET: ${{ needs.deploy-infrastructure.outputs.s3_bucket }}
     
     steps:
       - name: Summarize deployment
